<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:voiceView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

    <!--<com.carlos.voiceline.mylibrary.VoiceLineView-->
        <!--android:id="@+id/voicLine"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="200dp"-->
        <!--android:background="@android:color/holo_green_light"-->
        <!--voiceView:maxVolume="200"-->
        <!--voiceView:middleLine="@android:color/black"-->
        <!--voiceView:middleLineHeight="1dp"-->
        <!--voiceView:fineness="three"-->
        <!--voiceView:rectSpace="2dp"-->
        <!--voiceView:rectWidth="5dp"-->
        <!--voiceView:sensibility="one"-->
        <!--voiceView:viewMode="line"-->
        <!--voiceView:lineSpeed="90"-->
        <!--voiceView:voiceLine="@android:color/holo_green_dark"  />-->



        <SeekBar
            android:id="@+id/progress_Bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="50dp" />

        <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_uploading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/btn_margin"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/colorAccent"

        >
        <Button
            android:id="@+id/btn_delete"
            style="@style/Btn_setting"
            android:text="@string/delete"
            />
        <Button
            android:id="@+id/btn_derive"
            android:text="@string/derive"
            style="@style/Btn_setting"
            />
        <Button
            android:id="@+id/btn_uploading"
            android:text="@string/uploading"
            style="@style/Btn_setting"
            android:layout_marginRight="@dimen/btn_margin"
            />

    </LinearLayout>

</LinearLayout>