<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/write"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_title"/>

    <LinearLayout
        android:id="@+id/lin_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/linear_background"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/tv_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/blue_padding"
        android:textSize="20sp"
        android:layout_weight="1"
        android:text="@string/open_bluetooth"/>
        <ImageButton
            android:id="@+id/image_btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/blue_padding"
            android:background="@mipmap/btn_close"/>
    </LinearLayout>

    <include layout="@layout/line"/>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pair"
                android:padding="@dimen/padding"
                />
            <include layout="@layout/line"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_pair"
                android:layout_marginLeft="@dimen/btn_margin_bottm"
                android:layout_marginRight="@dimen/btn_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_usable"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/usable"
                    android:padding="@dimen/padding"
                    />

             <ProgressBar
                 android:id="@+id/loading"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="@dimen/btn_margin_bottm"
                 android:indeterminateDrawable="@drawable/progressbar"
                />
            </LinearLayout>
            <include layout="@layout/line"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_usable"
                android:layout_marginLeft="@dimen/btn_margin_bottm"
                android:layout_marginRight="@dimen/btn_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/image_search"
            android:layout_margin="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/refresh_2"/>

    </LinearLayout>


</LinearLayout>